     will need to do so again.
   * Hide eras menu in MP Create for campaigns which have
     "allow_era_choice=no".
   * Introduced side's name in MP Connect.
   * Middle click scrolling is now based on distance from initial click instead
     of the centre of the screen.
   * Make sliders able to be scrolled with the mouse wheel
 * WML engine:
   * WML variable turn_number is set correctly (to 1) in prestart and start
     events.  Previously, it retained its last value from the previous scenario
     until after the start event.
   * [scroll_to] and [scroll_to_unit] now take an optional side filter.
   * [trait] now accepts a "generate_description=" attribute, allowing the
     auto-generated effect descriptions to be turned off.
   * [modify_side] can now change a side's flags and status bar icon using the
     "flag" and "flag_icon" attributes also accepted in [side] definitions
     (bug #18454).
   * [store_side] now stores the "flag", "flag_icon", and "village_support"
     attributes from sides.
   * New macros RECALL and RECALL_XY
 * Miscellaneous and bug fixes:
   * Pango markup is applied correctly and consistently in button tooltips.
   * Fixed mishandling of invalid Pango markup resulting in previous messages
     being displayed instead in e.g. [message] (bug #20996).
   * Added wmllint code for recognizing unit id fields in macros.
   * Refactored code in wmltools to create a macro-parsing function.
   * Added era descriptions.
   * Fixed file chooser dialog (used in the map editor and for locating the
     wesnothd executable) interpreting special markup at the beginning of file
     names such as "#foo.map".

Version 1.11.7:
 * Add-ons client:
   * Add-ons downloaded with clients from this version onwards are shown
     in the Remove Add-ons with their original titles from the add-ons
     server now, instead of artificially generating titles by replacing
     underscores from file names.