@@ -60,6 +60,8 @@ Version 1.11.7+dev:
    * Middle click scrolling is now based on distance from initial click instead
      of the centre of the screen.
    * Make sliders able to be scrolled with the mouse wheel
+   * Allow advanced preference booleans and mp modifications to be toggled
+     via double click
 
 
 Version 1.11.7:
